# spark-zz

./: .gitignore  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
spark-zz/jobs/: main.ipynb
spark-zz/python_jobs/: processing_time_ntv.py  processing_time_vct.py
