[tool.poetry]
name = "spark-zz"
version = "0.1.0"
description = ""
authors = ["Marilzon <maxmaril@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
  pyspark = "^3.2.0"  
notebook = "^6.4.0"
jupyterlab = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
