[tool.poetry]
name = "spark-zz"
version = "0.1.0"
description = ""
authors = ["Marilzon <maxmaril@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.5"
pyspark = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
